feat: enhance commit selection by adding base branch support and improving logging